force-app/main/default/objects/EmailMessage/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Account this email was sent from</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Email Messages</relationshipLabel>
    <relationshipName>EmailMessages</relationshipName>
    <type>Lookup</type>
</CustomField>