force-app/main/default/objects/EmailMessage/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Contact this Email was sent to</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Email Messages</relationshipLabel>
    <relationshipName>EmailMessages</relationshipName>
    <type>Lookup</type>
</CustomField>