force-app/main/default/objects/EmailMessage/fields/EmailTemplateFolder__c.field-meta.xml
<CustomField>
    <fullName>EmailTemplateFolder__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The name of the folder the email message was in</inlineHelpText>
    <label>Email Template Folder</label>
    <length>150</length>
    <type>Text</type>
</CustomField>