force-app/main/default/objects/EmailMessage/fields/EmailTemplateFolderId__c.field-meta.xml
<CustomField>
    <fullName>EmailTemplateFolderId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The Id of the email template folder</inlineHelpText>
    <label>Email Template Folder Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>