force-app/main/default/objects/EmailMessage/fields/EmailTemplateId__c.field-meta.xml
<CustomField>
    <fullName>EmailTemplateId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The Salesforce Id of the email template used for this email</inlineHelpText>
    <label>Email Template Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>