force-app/main/default/objects/EmailMessage/fields/EmailTemplateName__c.field-meta.xml
<CustomField>
    <fullName>EmailTemplateName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The name of the email template used for this email.</inlineHelpText>
    <label>Email Template Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>