force-app/main/default/objects/EmailMessage/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>What lead is this email related to</inlineHelpText>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Email Messages</relationshipLabel>
    <relationshipName>EmailMessages</relationshipName>
    <type>Lookup</type>
</CustomField>