force-app/main/default/objects/EmailMessage/fields/NumberOfOpens__c.field-meta.xml
<CustomField>
    <fullName>NumberOfOpens__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Number of times the email was opened</inlineHelpText>
    <label>Number of Opens</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>