force-app/main/default/objects/EmailMessage/fields/SenderRequiresBCC__c.field-meta.xml
<CustomField>
    <fullName>SenderRequiresBCC__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does the sender require a BCC to be included in the email message?</inlineHelpText>
    <label>Sender Requires BCC</label>
    <type>Checkbox</type>
</CustomField>